<resources>
    <string name="app_name">Undivided</string>
    <string name="title_activity_navigation">Map</string>
    <string name="speech_toogle_on">START SPEAKING</string>
    <string name="speech_toogle_off">STOP SPEAKING</string>
    <string name="speech_prompt">Do you want to reply?</string>
    <string name="speech_not_supported">Sorry didnt get that</string>
    <string name="start_speaking">Okay!I will read your message now</string>
    <string name="stop_speaking">Done!</string>
    <string name="sms_label" />
    <string name="none" />
    <string name="speech_toggle_on" />
    <string name="speech_toggle_off" />
    <string name="menu_string_settings">Settings</string>
    <string name="main_dialog_edit">Edit</string>
    <string name="main_dialog_delete">Delete</string>
    <string name="main_about_dialog_ok">OK</string>
    <string name="main_about_dialog_message">

    </string>
    <string name="main_menu_new">Add Rule</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_outbox">View Outbox</string>
    <string name="main_menu_about">About</string>
    <string name="main_menu_instructions">Instructions</string>
    <string name="addedit_title">Add Rule</string>
    <string name="addedit_editText_name">A unique name</string>
    <string name="addedit_editText_description">A short description</string>
    <string name="addedit_editText_text">The text to be replied to calls/texts</string>
    <string name="addedit_textView_contacts">Contacts only?</string>
    <string name="addedit_textView_replyTo">Reply to</string>
    <string name="addedit_radio_both">Both</string>
    <string name="addedit_radio_sms">Texts</string>
    <string name="addedit_radio_call">Calls</string>
    <string name="addedit_menu_save">Save</string>
    <string name="contactpicker_title">Contact Picker</string>
    <string name="contactpicker_menu_selectAll">Select All</string>
    <string name="contactpicker_menu_deselectAll">Deselect All</string>
    <string name="contactpicker_menu_done">Done</string>
    <string name="outbox_title">Outbox</string>
    <string name="outbox_text_empty">You have no messages to view</string>
    <string name="outbox_dialog_deleteAll">Delete All</string>
    <string name="outbox_dialog_cancel">Cancel</string>
    <string name="outbox_menu_deleteAll">Delete All</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions">
		<![CDATA[
			<h2>Rules</h2>
				<p>Rule names must be unique.</p>
				<p>Only the name and text fields are required.</p>
				<p>Rule texts longer than 160 characters (SMS limit) are supported, but will be sent as multiple SMSs</p>
				<p>Press and hold on a Rule on the main window to edit or delete it.</p>
				<p>On receiving an SMS or a call, all applicable rules will be invoked.</p>
			<h2>Widgets</h2>
				<p>Only 1 widget per rule is allowed.</p>
				<p>After a rule has been deleted, its widget needs to be manually deleted.</p>
			<h2>Settings</h2>
				<p>You can set call rule applications to silence the call when they\'re invoked.</p>
		]]>
    </string>
    <string name="configure_title">Add ARM Widget</string>
    <string name="configure_text_info">Select a rule</string>
    <string name="configure_text_empty">You have no Rules from which to create a widget</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_mute_text">Rules mute calls after: </string>
    <string-array name="settings_mute_spinner_array">
        <item>Off</item>
        <item>0 sec</item>
        <item>3 sec</item>
        <item>5 sec</item>
        <item>10 sec</item>
    </string-array>
    <string name="shared_preferences_key">COM.MHMT.AUTOTEXTMATE</string>
    <string name="settings_mute_position_key">com.mhmt.autotextmate.mutedelayposition</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="signed_out">Signed Out </string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>
    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>
    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>
    <string name="message_list">Message List</string>
    <string name="contact">Contact</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="organization">Organization</string>
    <string name="signature">Signature</string>
    <string name="hint_type_the_message">Type the message ...</string>
    <string name="edit_message">Edit Message</string>
    <string name="search_message">Search Message</string>
    <string name="transition_name_search">search</string>
    <string name="empty_view_desc">Noting ~</string>
    <string name="send_message">Send Message</string>
    <string name="add_contact">Add Contact</string>
    <string name="setting">Setting</string>
    <string name="hint_input_phone_number">Input phone number</string>
    <string name="pick">P i c k</string>
    <string name="click_again_to_exit">Click again to exit</string>
    <string name="tips_you_have_added_this_contact">You have added this contactAdd</string>
    <string name="input">Input</string>
    <string name="message_cannot_be_empty">Message cannot be empty</string>
    <string name="contact_cannot_be_empty">Contact cannot be empty</string>
    <string name="send">Send</string>
    <string name="message_have_been_sent">Message have been sent, click OK to exit</string>
    <string name="tips">Tips</string>
    <string name="send_message_subtitle">%1$d contact, have sent %2$d</string>
    <string name="NULL">null</string>
    <string name="delete">Delete</string>
    <string name="send_again">Send Again</string>
    <string name="confirm_to_delete">Sure to delete?</string>
    <string name="reserved_sms">Reserved SMS</string>
    <string name="reserved_contact">Reserved Contact</string>
    <string name="no_organization">No Organization</string>
    <string name="add_organization">Add organization</string>
    <string name="no_signature">No Signature</string>
    <string name="add_signature">Add Signature</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="history_contact">History</string>
    <string name="phone_contact">Phone</string>
    <string name="group_contact">Group</string>
    <string name="unselected">unselected</string>
    <string name="delete_of">Delete \"%s\".</string>
    <string name="cannot_be_empty">Cannot be empty!</string>
    <string-array name="pick_mode_spinner">
        <item>Pick From The Phone</item>
        <item>Pick From The Input</item>
    </string-array>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Are you a driver?</string>
    <string name="slide_1_desc">Let undivided always stay under control. </string>
    <string name="slide_2_title">Choose</string>
    <string name="slide_2_desc">Choose contacts who can message or call you even you are driving</string>
    <string name="slide_3_title">Set-Up</string>
    <string name="slide_3_desc">Set-up your settings for your convenience </string>
    <string name="slide_4_title">Navigation</string>
    <string name="slide_4_desc">Guides you on your way after setting up your destination</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="nothing_to_show">No contacts found</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_group">Add Group</string>
    <string name="app_label">SMS Group</string>
    <string name="dialog_ok">OK</string>
    <string name="about">about</string>
    <string name="app_title">Group</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="access_token">pk.eyJ1IjoiZGpkeXN0ZSIsImEiOiJjajhuOGt0ZGsxNnJsMndzN2FqNXZ2cWR6In0.9mCwvUJDx78LkgaWCUmQdw</string>
</resources>