<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="end"
    tools:context="com.training.android.undivided.GroupSender.Module.Edit_Message.EditMessageFragment">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_margin"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/organization"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/signature"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/organization_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:tag="@string/organization"
                        android:text="@string/unselected"
                        android:textAllCaps="false"/>

                    <Button
                        android:id="@+id/signature_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:tag="@string/signature"
                        android:text="@string/unselected"
                        android:textAllCaps="false"/>

                </LinearLayout>

                <EditText
                    android:id="@+id/type_message_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="20dp"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/hint_type_the_message"
                    android:inputType="textMultiLine"
                    android:tag="@string/edit_message"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <fragment
        android:id="@+id/add_contracts_fragment"
        android:name="com.training.android.undivided.GroupSender.Module.Edit_Message.AddContactFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"/>

</android.support.v4.widget.DrawerLayout>
